--- a/login.html
+++ b/login.html
@@ -5,8 +5,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="login.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
+
+    <nav class="navbar navbar-expand-lg navbar-custom">
+        <div class="container-fluid">
+          <!-- Brand -->
+          <a class="navbar-brand" href="landingpage.html">CV Creator Tool</a>
+          <!-- Toggler for small screens -->
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <!-- Navbar Links -->
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Features</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Contact</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Pricing</a>
+              </li>
+            </ul>
+            <!-- Right Side Buttons -->
+            <div class="ms-auto d-flex gap-2">
+              <button class="btn btn-custom" type="button"><a href="login.html" style="color: white;">Login</a></button>
+              <button class="btn btn-custom" type="button"><a href="registration.html" style="color: white;">Register</a></button>
+              <button class="btn btn-custom" type="button" data-bs-toggle="modal" data-bs-target="#notificationModal">Notifications</button>
+            </div>
+          </div>
+        </div>
+      </nav>
     <h1>Login Form</h1>
     <hr>
     <form class="form">
@@ -25,5 +60,7 @@
     
         <button type="submit">Login</button>
     </form>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
