--- a/cv.html
+++ b/cv.html
@@ -76,5 +76,7 @@
     <footer class="footer">
         <p>&copy; 2024 Merjem Alić</p>
     </footer>
+
+    <script src="cv.js"></script>
 </body>
 </html>
